@@ -20,6 +20,7 @@ import java.time.LocalDate;
 import java.util.*;
 import java.util.function.Function;
 import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 /**
  * The single, authoritative service for bootstrapping the application's state.
@@ -71,74 +72,111 @@ public class ProductionBootstrapService implements ApplicationRunner {
             persistStateToDatabase(usersFromAd, teamsWithMembers);
 
             log.info("✅ Bootstrap process completed successfully.");
+
         } catch (Exception e) {
-            log.error("💥 CRITICAL: Bootstrap process failed, preventing application startup.", e);
+            log.error("💥 CRITICAL: Bootstrap process failed. The application state may be inconsistent.", e);
             throw new RuntimeException("Bootstrap failed, preventing application startup.", e);
         }
     }
 
+    /**
+     * Discovers all unique CRBT team IDs by identifying Branch Leaders in AD
+     * and querying the CRBT API for their teams. This mirrors the PowerShell
+     * script's "discover then detail" approach.
+     */
     private Set<Integer> discoverAllTeamIds(List<AppUser> allUsers) {
-        // First, identify who the Branch Leaders are.
-        Map<String, AppUser> userMap = allUsers.stream().collect(Collectors.toMap(AppUser::getUsername, Function.identity()));
-        Set<String> leaderUsernames = userMap.values().stream()
-                .filter(u -> u.getManagerUsername() != null)
+        // Identify all users who are designated as managers in the AD data
+        Set<String> managerUsernames = allUsers.stream()
                 .map(AppUser::getManagerUsername)
+                .filter(Objects::nonNull)
                 .collect(Collectors.toSet());
 
+        // Filter to find users who are both managers AND in a Branch OU
         List<AppUser> branchLeaders = allUsers.stream()
-                .filter(user -> leaderUsernames.contains(user.getUsername()))
-                .filter(user -> user.getDistinguishedName() != null && user.getDistinguishedName().contains("OU=Branch"))
-                .collect(Collectors.toList());
+                .filter(user -> managerUsernames.contains(user.getUsername()))
+                .filter(user -> user.getDistinguishedName() != null &&
+                               user.getDistinguishedName().contains("OU=Branch"))
+                .toList();
 
         log.info("Identified {} potential Branch Leaders to query for teams.", branchLeaders.size());
 
-        // For each leader, call the API to find their teams and collect the unique IDs.
-        return branchLeaders.parallelStream() // Use parallel stream for performance
-                .flatMap(leader -> crbtApiClient.fetchTeamsForLeader(leader.getUsername()).stream())
+        // For each leader, call the API to find their teams and collect unique IDs
+        // Using parallel stream for performance on this network-intensive operation
+        return branchLeaders.parallelStream()
+                .flatMap(leader -> {
+                    try {
+                        return crbtApiClient.fetchTeamsForLeader(leader.getUsername()).stream();
+                    } catch (Exception e) {
+                        log.warn("Failed to fetch teams for leader '{}': {}", leader.getUsername(), e.getMessage());
+                        return Stream.empty();
+                    }
+                })
                 .map(teamResponse -> teamResponse.crbtID)
-                .filter(Objects::nonNull)
                 .collect(Collectors.toSet());
     }
 
+    /**
+     * Fetches full team details (including member lists) for all discovered team IDs.
+     */
     private List<CrbtApiClient.CrbtApiTeamResponse> fetchAllTeamDetails(Set<Integer> teamIds) {
-        // For each unique team ID, get its full member list.
-        return teamIds.parallelStream() // Use parallel stream for performance
-                .flatMap(id -> crbtApiClient.fetchTeamDetails(id).stream())
-                .collect(Collectors.toList());
+        if (teamIds.isEmpty()) {
+            log.warn("No team IDs discovered. No team details will be fetched.");
+            return Collections.emptyList();
+        }
+
+        // For each unique team ID, get its full member list
+        return teamIds.parallelStream()
+                .flatMap(id -> {
+                    try {
+                        return crbtApiClient.fetchTeamDetails(id).stream();
+                    } catch (Exception e) {
+                        log.warn("Failed to fetch details for team ID {}: {}", id, e.getMessage());
+                        return Stream.empty();
+                    }
+                })
+                .toList();
     }
 
+    /**
+     * This method is annotated as @Transactional. All operations within it will
+     * either succeed together or fail together, ensuring data consistency.
+     *
+     * CRITICAL FIX: This method now handles data integrity issues gracefully,
+     * preventing the EntityNotFoundException that was crashing the application.
+     */
     @Transactional
-    public void persistStateToDatabase(List<AppUser> usersFromAd, List<CrbtApiClient.CrbtApiTeamResponse> teamsWithMembers) {
+    public void persistStateToDatabase(List<AppUser> usersFromAd,
+                                     List<CrbtApiClient.CrbtApiTeamResponse> teamsWithMembers) {
         log.info("PERSIST PHASE: Starting database transaction...");
 
         // 1. Wipe all existing state for a clean slate
-        log.info("PERSIST PHASE: Clearing old data...");
         userTeamMembershipRepository.deleteAllInBatch();
         appUserRepository.deleteAllInBatch();
         crbtTeamRepository.deleteAllInBatch();
         log.info("PERSIST PHASE: Old data cleared.");
 
-        // 2. Process and Save Users, handling manager relationships correctly
         if (usersFromAd.isEmpty()) {
-            log.warn("No users fetched from AD. The database will be empty.");
+            log.warn("No users fetched from AD. The state database will be empty.");
             return;
         }
 
-        // Create a map for efficient lookup (Username -> AppUser object)
+        // 2. Process and Save Users with resilient manager linking
         Map<String, AppUser> userMap = usersFromAd.stream()
                 .collect(Collectors.toMap(AppUser::getUsername, Function.identity()));
 
-        // Set the manager object references in memory before saving.
-        // This allows JPA to correctly handle the insert order.
+        // **CRITICAL FIX**: Link manager objects in memory *before* saving
+        // This prevents EntityNotFoundException when managers don't exist in our dataset
         userMap.values().forEach(user -> {
             if (user.getManagerUsername() != null) {
                 AppUser manager = userMap.get(user.getManagerUsername());
                 if (manager != null) {
                     user.setManager(manager);
                 } else {
-                    log.warn("Manager '{}' for user '{}' not found in the dataset. Setting manager to null.",
+                    // This is the fix for the EntityNotFoundException
+                    log.warn("Manager '{}' for user '{}' not found in the dataset. This link will be ignored.",
                             user.getManagerUsername(), user.getUsername());
-                    user.setManagerUsername(null); // Clean up invalid reference
+                    user.setManagerUsername(null); // Clean the invalid reference
+                    user.setManager(null);
                 }
             }
         });
@@ -161,31 +199,37 @@ public class ProductionBootstrapService implements ApplicationRunner {
         crbtTeamRepository.saveAll(teamsToSave);
         log.info("PERSIST PHASE: Saved {} teams to the database.", teamsToSave.size());
 
-        // 4. Process and Save Team Memberships
+        // 4. Process and Save Team Memberships with resilient user linking
         Map<Integer, CrbtTeam> teamMap = teamsToSave.stream()
                 .collect(Collectors.toMap(CrbtTeam::getCrbtId, Function.identity()));
 
         List<UserTeamMembership> memberships = teamsWithMembers.stream()
+                .filter(teamResponse -> teamResponse.memberList != null)
                 .flatMap(teamResponse -> {
                     CrbtTeam team = teamMap.get(teamResponse.crbtID);
-                    if (team == null || teamResponse.memberList == null) {
-                        return null;
+                    if (team == null) {
+                        log.warn("Team with CRBT ID {} not found in saved teams. Skipping memberships.", teamResponse.crbtID);
+                        return Stream.empty();
                     }
+
                     return teamResponse.memberList.stream()
                             .map(member -> {
                                 AppUser user = userMap.get(member.mbrJorP);
                                 if (user == null) {
-                                    log.warn("User '{}' from CRBT team {} not found in AD data. Skipping membership.", member.mbrJorP, team.getCrbtId());
+                                    log.warn("User '{}' from CRBT team {} not found in AD data. Skipping membership.",
+                                            member.mbrJorP, team.getCrbtId());
                                     return null;
                                 }
+
                                 UserTeamMembership membership = new UserTeamMembership(user, team);
                                 membership.setMemberRole(member.mbrRoleCd);
+                                // In a real scenario, you would parse the date from member.mbrBegDa
                                 membership.setEffectiveStartDate(LocalDate.now());
                                 return membership;
-                            });
+                            })
+                            .filter(Objects::nonNull);
                 })
-                .filter(Objects::nonNull)
-                .collect(Collectors.toList());
+                .toList();
 
         userTeamMembershipRepository.saveAll(memberships);
         log.info("PERSIST PHASE: Saved {} team memberships to the database.", memberships.size());
